# niffler-py-st3

./: .gitignore  .trigger-all-tests  .trigger-debug  .trigger-final  .trigger-final-fix  .trigger-v11  .trigger-v12  .trigger-v13  .trigger-v14  .trigger-v15  .trigger-v16  .trigger-v17  .trigger-v4  .trigger-v5  .trigger-v6  deploy-pages.sh  index.html  push.sh  register_test_user.py  setup-ci.sh  setup_ci.py  test_imports.py
niffler-e2e-tests-python/: .gitignore  README.md  config.py  conftest.py  env.default  marks.py  pyproject.toml  setup.cfg
niffler-e2e-tests-python/clients/: __init__.py  api.py  auth_client.py  grpc_client.py  kafka_client.py  soap_client.py  spends_client.py
niffler-e2e-tests-python/databases/: spend_db.py
niffler-e2e-tests-python/fixtures/: auth_fixtures.py  client_fixtures.py  pages_fixtures.py
niffler-e2e-tests-python/helpers/: db_client.py  registration_helper.py
niffler-e2e-tests-python/modals/: category.py  config.py  enums.py  oauth.py  spend.py
niffler-e2e-tests-python/pages/: auth_page.py  auth_reg_page.py  base_page.py  category_page.py  profile_page.py  registration_page.py  spendings_page.py
niffler-e2e-tests-python/tests/: REFACTORING_README.md  conftest.py  test_api_with_db.py  test_auth_page.py  test_db_integration.py  test_grpc.py  test_integration.py  test_kafka.py  test_profile_page.py  test_registation_page.py  test_registration_refactored.py  test_smoke.py  test_soap.py  test_spending_page.py
niffler-e2e-tests-python/tools/: fakers.py
niffler-e2e-tests-python/utils/: allure_helpers.py  api_assertions.py  (+2 more)
(+1012 files in other folders)
