[tool.poetry]
name = "niffler-e2e-tests-python"
version = "0.1.0"
description = "Niffler tests"
authors = ["QaGuru Student <student@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.0.0"
selene = "2.0.0rc9"
python-dotenv = "^1.0.0"
Faker = "^24.0.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
python_files = ["test_*.py"]
addopts = "-v -s"
pythonpath = "."